--- a/Site/style/style.css
+++ b/Site/style/style.css
@@ -12,6 +12,18 @@ header{
     flex-direction: row;
     align-items: flex-start;    
     border: 0;
+    color: white;
+}
+
+.acessar{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
 }
 
 .navegar{
@@ -24,17 +36,23 @@ header{
 
 }
 
+a{
+    color: white;
+    text-decoration: none;
+}
 .navegar img{
     width: 100px; 
     height: 45px; 
     padding-left: 100px; 
-    padding-top: 5px;
+    padding-top: 4px;
 }
 
 .menu{
     display: flex;
     list-style: none;
-    padding-left: 800px;
+    width: 100%;
+    justify-content: space-around;
+    align-items: flex-end;
 }
 
 body{
@@ -72,10 +90,19 @@ section {
     min-height: 3%;
 }
 
-.txt {
+.txt1 {
+    background-color: #f9f5ec;
+    padding-left: 15px;
+    min-width: 74%;
+    min-height: 90%;
+    text-align: justify;
+}
+
+.txt2 {
     background-color: #f9f5ec;
     min-width: 74%;
     min-height: 90%;
+    text-align: justify;
 }
 
 .img {
@@ -93,22 +120,42 @@ section {
     min-width: 100%;
     min-height: 95%;
     display: flex;
-    justify-content:flex-start;
-    
+    justify-content:flex-start;   
 }
 
-.login{
+.login-cadastro{
     background-color: #f9f5ec;
     min-width: 25%;
-    min-height: 95%;
+    min-height: 65%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-around;
     border: 1px;
     border-color: black;
     border-style: solid;
+    margin-left: 200px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    gap: 2px;
 }
 
+.login-cadastro input{
+    width: 40%;
+    
+}
+
+.login-cadastro button{
+    width: 40%;
+    background-color: #702424;
+    color: white;
+}
+
+.login-cadastro span{
+    color: black;
+    margin: 0;
+    padding: 0;
+}
 
 .puzzle {
     background-color: #f7f1e6;
@@ -125,4 +172,59 @@ footer{
     min-height: 10%;
     bottom: 0;
     left: 0;
+}
+
+footer span{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+}
+
+
+/* Avaliação com estrelas*/
+
+.book{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30%;
+    height: 100%;
+    margin: 0;
+    padding-left: 100px;
+
+}
+
+
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end; 
+}
+
+.rating input {
+    display: none; 
+}
+
+.rating label {
+    font-size: 40px;
+    color: white; 
+    cursor: pointer; 
+    padding: 0 5px;
+}
+
+.rating input:checked ~ label {
+    color: #702424;
+}
+
+.rating label:hover, .rating label:hover ~ label {
+    color: #702424;
+}
+
+.rating label {
+    transition: color 0.2s;
 }
