--- a/Site/style/style.css
+++ b/Site/style/style.css
@@ -1,431 +1,135 @@
-html{
-    height: 100%;
-    margin: 0; 
-    display: flex; 
-    flex-direction: column;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-
-header{
-    background-color: #702424;
-    min-height: 60px;
-    min-width: 25%;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;    
-    border: 0;
-    color: white;
-    position: relative;
+:root{
+    --cor00: #10491B;
+    --cor01: #702424;
+    --cor02: #F7F1E6;
+    --cor03: #333333;
+    --cor04: #e2ded4;
 }
-
-
-
-/* Header e Menu*/
-
-.acessar{
+/* body */
+body {
     display: flex;
     flex-direction: column;
-    min-height: 100%;
-    justify-content: center;
-    text-align: center;
-    color: white;
-    padding-left: 60px;
+    background-color: var(--cor02);
 }
 
-.navegar{
-    background-color: #10491B;
-    min-width: 80%;
-    min-height: 100%;
+/*Navbar e header*/
+
+body>header{
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-}
-
-a{
-    color: white;
-    text-decoration: none;
-}
-.navegar img{
-    width: 100px; 
-    height: 45px; 
-    padding-left: 100px; 
-    padding-top: 4px;
-}
-
-.menu{
-    display: flex;
-    list-style: none;
-    width: 100%;
     justify-content: space-around;
-    align-items: flex-end;
-}
-
-body{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-}
-
-/*Index e Containers Gerais*/
-section {
-    min-width: 100%;
-    min-height: 84%;
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    padding: 0;
+    width: 100%;
+    backdrop-filter: blur(10px);
+    position: fixed;
+}
+
+.logo img{
+    height: 60px;
+    width: 80px;
+}
+
+nav>ul{
+    list-style: none;
+    display: flex;
+    margin: 20px;
+}
+
+li>a{
+    margin: 60px;
+    text-decoration: none;
+    color: var(--cor03);
+}
+
+li>a:hover{
+    color: var(--cor01);
+}
+
+.acessar>a{
+    margin:20px;
+    border-radius: 15px;
+    border-color: var(--cor00);
+    border-style: solid;
+    padding: 10px;
+    text-decoration: none;
+    color: var(--cor00);
+}
+
+
+.acessar>a:hover{
+    background-color: var(--cor00);
+    color: var(--cor02);
+}
+
+/*Main*/
+
+main{
+    margin-top: 90px;
 }
 
 .container{
-    background-color: #f9f5ec;
-    min-width: 100%;
-    min-height: 45%;
-    padding: 0;
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
-.container-escuro{
-    background-color:#f9f5ec;
-    min-width: 100%;
-    min-height: 90%;
+.foto-livro{
     display: flex;
-    justify-content: flex-start;
+    width: 600px;
+    justify-content: center;
+}
+
+.texto-inicial{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+
+.texto-inicial>h1{
+    color: var(--cor03);
+    margin-bottom: 20px;
+    font-size: 70px;
+}
+
+.texto-inicial>span{
+    color: var(--cor03);
+    margin-bottom: 20px;
+    font-size: 20px;
     
 }
 
-.faixa{
-    background-color: white; 
-    min-height: 10px;
-}
-
-.txt1 {
-    background-color: #f9f5ec;
-    min-width: 74%;
-    min-height: 90%;
-    text-align: justify;
-    padding: 0px;
-    border-color: #f7f1e6;
+.container .texto-inicial>a{
+    margin-top: 20px;
+    width: 150px;
+    border-radius: 15px;
+    border-color: var(--cor00);
+    background-color: var(--cor00);
     border-style: solid;
-}
-
-.txt2 {
-    background-color: #f9f5ec;
-    min-width: 74%;
-    min-height: 90%;
-    padding: 0;
-    text-align: justify;
-    background-clip: content-box, padding-box;
-    border-color: #f7f1e6;
-    border-style: solid;
-}
-
-.txt3 {
-    background-color: #f9f5ec;
-    min-width: 74%;
-    min-height: 90%;
-    text-align: center;
-    padding: 0px;
-    border-color: #f7f1e6;
-    border-style: solid;
-}
-
-.txt3>span{
-    padding-bottom: 0;
-}
-
-.img {
-    background-color: #f7f1e6;
-    min-width: 25%;
-    min-height: 90%;
-    display: flex;
-    justify-content: center;
-
-}
-
-/* Página de Login e Cadastro*/
-.login-box{
-    background-color: #f7f1e6;
-    min-width: 100%;
-    min-height: 95%;
-    display: flex;
-    justify-content:flex-start;   
-}
-
-.login-cadastro{
-    background-color: #f9f5ec;
-    width: 400px;
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    border: 1px;
-    border-color: black;
-    border-style: solid;
-    margin-left: 200px;
-    margin-top: 70px;
-    margin-bottom: 25px;
-    gap: 2px;
-}
-
-.login-cadastro input{
-    width: 40%;
-    
-}
-
-.login-cadastro button{
-    width: 40%;
-    background-color: #702424;
-    color: white;
-}
-
-.login-cadastro span{
-    color: black;
-    margin: 0;
-    padding: 0;
-    justify-content: first baseline;
-}
-
-.puzzle img{
-    background-color: #f7f1e6;
-    max-width: auto;
-    max-height: auto;
-    height: 680px;
-    width: 800px;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-}
-
-/* Footer */
-
-footer{
-    background-color: #10491B;
-    min-height: 60px;
-    margin-bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-footer span{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white;
-}
-
-
-/* Avaliação com estrelas*/
-
-.book{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 30%;
-    height: 100%;
-    margin: 0;
-    padding-left: 100px;
-
-}
-
-.kpi {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-right: 50px;
-    padding-bottom: 0;
-}
-
-.kpi h2{
-    font-size:xx-large;
-    padding-bottom: 0;
-}
-
-.rating {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-    padding-left: 40px;
-
-}
-
-.rating input {
-    display: none; 
-}
-
-.rating label {
-    font-size: 40px;
-    color: #C3D1C6; 
-    cursor: pointer; 
-    padding: 0 5px;
-    transition: color 1s;
-}
-
-.rating input:checked ~ label {
-    color: #702424;
-}
-
-.rating label:hover, .rating label:hover ~ label {
-    color: #702424;
-}
-
-/*Dashboard e KPIs*/
-
-.dash {
-    background-color: #f7f1e6;
-    width: 80%;
-    height: 600px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center; 
-    align-items: center;
-    border-left: 10px solid #f9f5ec;
-    gap: 10px;
-    padding: 20px;
-}
-
-.dash-top {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    height: 350px;  
     padding: 10px;
-}
-
-#bar {
-    width: 48% !important;
-    height: 300px !important;
-}
-
-#caixa_cap {
-    width: 48%;
-    max-height: 300px;
-    overflow-y: auto;
-    display: flex;
-    justify-content: flex-end;
-}
-
-#capitulos {
-    background: #f3eadc;
-    padding: 15px 20px;
-    border-radius: 8px;
-    border: 1px solid #d2c5b5;
-    max-height: 280px;
-    width: 90%;
-    overflow-y: auto;
-}
-
-.kpis{
-    background-color: #945B5B;
-    width: 19%;
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-color: #f9f5ec;
-    border-style: solid;
-    border-radius: 3%;
-}
-
-.menu_lateral{
-    background-color: #945B5B; 
-    position: absolute;
-    top: 55px; 
-    right: 0; 
-    width: 150px; 
-    height: 200px; 
-    border: 1px solid #ccc;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 1000; 
-    display: none; 
-}
-
-.menu_lateral > .menu{
-    
-    display: flex;
-    flex-direction: column; 
-    list-style: none;
-    width: 100%;
-    gap: 10px; 
-    align-items: flex-start;
-
-}
-
-.cards{
-    display: flex;
-    align-items: center;
-    color: white;
-}
-
-.desc-kpi{
-    align-items: center;
+    text-decoration: none;
+    color: var(--cor02);
     text-align: center;
 }
 
+/**/
 
-#capitulos details {
-    margin-bottom: 18px;
-    padding: 10px 14px;
-    background: #f9f4ec;
-    border: 1px solid #d8cbb9;
-    border-radius: 6px;
+.container-livro{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    background-color: var(--cor04);
 }
-
-#capitulos summary {
-    font-weight: bold;
-    color: #10491B;
-    cursor: pointer;
-    padding: 4px;
-}
-
-
-#capitulos button {
-    background: #945B5B;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-    margin: 8px 0;
-    cursor: pointer;
-    font-size: 14px;
-}
-
-#capitulos button:hover {
-    background: #702424;
-}
-
-#capitulos label {
-    display: inline-block;
-    margin-right: 14px;
-    margin-bottom: 6px;
-    font-size: 14px;
-}
-
-#btnSalvarChapters {
-    background: #C3D1C6;
-    color: #fff;
-    border: none;
-    padding: 10px 14px;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 15px;
-    margin-top: 15px;
-}
-
-#btnSalvarChapters:hover {
-    background: #10491B;
-}
-
-
-
-
-
