--- a/Site/style/style.css
+++ b/Site/style/style.css
@@ -6,11 +6,12 @@
 }
 
 :root{
-    --cor00: #10491B;
+    --cor00: #10491B; /*0D3D17*/
     --cor01: #702424;
-    --cor02: #F7F1E6;
+    --cor02: #F7F0E4;
     --cor03: #333333;
-    --cor04: #e2ded4;
+    --cor04: #f0ece0;
+    --cor05: #B5AEA6;
 }
 /* body */
 body {
@@ -49,6 +50,8 @@ li>a{
 
 li>a:hover{
     color: var(--cor01);
+    font-weight: bold;
+    transition: 1s;
 }
 
 .acessar>a{
@@ -78,15 +81,20 @@ main{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: 30px;
 }
 
 .foto-livro{
     display: flex;
     width: 600px;
     justify-content: center;
+}
+
+.foto-livro img{
+    width: 65%; 
+    height: 100%; 
+    box-shadow: 10px 10px 10px 10px #333333;
+    
 }
 
 .texto-inicial{
@@ -121,15 +129,377 @@ main{
     text-align: center;
 }
 
-/**/
+.container .texto-inicial>a:hover{
+    background-color: var(--cor01);
+    color: var(--cor02);
+    border-color: var(--cor01);
+    transition: 0.5s;
+}
+
+/*Cards do livro*/
 
 .container-livro{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 30px;
+    border-radius: 20px;
+    margin-top: 50px;
+    margin-bottom: 30px;
     margin-left: 30px;
     margin-right: 30px;
     background-color: var(--cor04);
+    text-align: center;
 }
+
+.texto-card>h1{
+    color: var(--cor03);
+    margin: 30px;
+    font-size: 40px;
+}
+
+.texto-card>span{
+    color: var(--cor03);
+    margin: 30px;
+    font-size: 20px;
+}
+
+
+.container-cards{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 30px;
+    background-color: var(--cor04);
+    width: 1200px;
+}
+
+.card{
+    width: 350px;
+    height: 200px;
+    border-radius: 20px;
+    align-content: center;
+    border: 2px; 
+    border-style: solid; 
+    border-color: var(--cor00);
+    background-color: var(--cor02);
+    box-shadow: 2px 2px 2px 2px var(--cor03);
+}
+
+.card:hover{
+    transform: scale(1.1);
+    box-shadow: 1px 1px 1px 1px var(--cor03);
+    transition: 0.5s;
+
+}
+
+.card>h2{
+    color: var(--cor03);
+    margin: 10px;
+}
+
+.card>p{
+    color: var(--cor03);
+}
+
+/*Login e Cadastro */
+.login-box{
+    background-image: url(../imgs/puzzle_trans.png);
+    background-size: 1600px 1400px;
+    background-repeat:  no-repeat;  
+    background-position: bottom;
+    min-width: 900px;
+    min-height: 900px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-cadastro{
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
+    height: 600px;
+    background-color: var(--cor02);
+    border-color: var(--cor04);
+    border-style: solid;
+    box-shadow: 2px 2px 2px 2px var(--cor00);
+}
+
+.login-cadastro input{
+    margin-bottom: 10px;
+    border-radius: 30px;
+    border-color: var(--cor00);
+    background-color: var(--cor02);
+    height: 40px;
+    width: 200px;
+    text-align: center;
+}
+
+.login-cadastro span{
+    color: var(--cor03);
+}
+
+.login-cadastro h2{
+    color: var(--cor03);
+    padding: 20px;
+}
+
+.login-cadastro h3{
+    color: var(--cor03);
+    padding: 30px;
+}
+
+.login-cadastro button{
+    margin:20px;
+    border-radius: 15px;
+    border-color: var(--cor00);
+    border-style: solid;
+    padding: 10px;
+    text-decoration: none;
+    color: var(--cor00);
+    height: 40px;
+    width: 150px;
+}
+
+
+.login-cadastro button:hover{
+    background-color: var(--cor00);
+    color: var(--cor02);
+}
+
+/*Menu Sanduíche*/
+
+.menu_lateral{
+    background-color: var(--cor04); 
+    position: absolute;
+    top: 55px; 
+    right: 0; 
+    width: 250px; 
+    height: 150px; 
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 5px var(--cor03);
+    z-index: 1000; 
+    display: none; 
+}
+
+.menu_lateral > .menu{
+    
+    display: flex;
+    flex-direction: column; 
+    list-style: none;
+    width: 100%;
+    gap: 10px; 
+    align-items: flex-start;
+    justify-content: space-around;
+
+}
+
+/*Dashboard*/
+
+.container-dash{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin: 30px;
+}
+
+.card-kpi{
+    width: 200px;
+    height: 100px;
+    border-radius: 20px;
+    align-content: center;
+    border: 2px; 
+    border-style: solid; 
+    border-color: var(--cor00);
+    background-color: var(--cor02);
+    box-shadow: 2px 2px 2px 2px var(--cor03);
+}
+
+.card-kpi:hover{
+    transform: scale(1.1);
+    box-shadow: 1px 1px 1px 1px var(--cor03);
+    transition: 0.5s;
+
+}
+
+.card-kpi h3{
+    color: var(--cor03);
+    margin: 10px;
+    text-align: center;
+    
+}
+
+.card-kpi p{
+    color: var(--cor03);
+    text-align: center;
+}
+
+/* Box de Capítulos*/
+
+#capitulos details {
+    margin-bottom: 18px;
+    padding: 10px 14px;
+    background: var(--cor02);
+    border: 1px solid var(--cor05);
+    border-radius: 6px;
+}
+
+#capitulos summary {
+    font-weight: bold;
+    color: #10491B;
+    cursor: pointer;
+    padding: 4px;
+}
+
+
+#capitulos button {
+    background: var(--cor05);
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    margin: 8px 0;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+#capitulos button:hover {
+    background: var(--cor01);
+}
+
+#capitulos label {
+    display: inline-block;
+    margin-right: 14px;
+    margin-bottom: 6px;
+    font-size: 14px;
+}
+
+#botao-salvar {
+    background: var(--cor02);
+    color: white;
+    border: none;
+    padding: 10px 14px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 15px;
+    margin-top: 15px;
+}
+
+
+/* Avaliação com estrelas*/
+
+.book{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 100%;
+    margin: 0;
+
+}
+
+.kpi {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 0;
+}
+
+.kpi h2{
+    font-size:xx-large;
+    padding-bottom: 0;
+}
+
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+
+}
+
+.rating input {
+    display: none; 
+}
+
+.rating label {
+    font-size: 40px;
+    color: var(--cor05); 
+    cursor: pointer; 
+    padding: 0 5px;
+    transition: color 1s;
+}
+
+.rating input:checked ~ label {
+    color: var(--cor01);
+}
+
+.rating label:hover, .rating label:hover ~ label {
+    color: var(--cor01);
+}
+
+main h2{
+    color: var(--cor03);
+    text-align: center;
+}
+
+.book>a{
+    margin-top: 20px;
+    width: 150px;
+    border-radius: 15px;
+    border-color: var(--cor00);
+    background-color: var(--cor00);
+    border-style: solid;
+    text-decoration: none;
+    color: var(--cor02);
+    text-align: center;
+}
+
+.book>a:hover{
+    background-color: var(--cor01);
+    color: var(--cor02);
+    border-color: var(--cor01);
+    transition: 0.5s;
+}
+
+/*Footer*/
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 30px;
+}
+
+.redes-sociais{
+    display: flex;
+    width: 900px;
+    height: 300px;
+    justify-content: space-around;
+    align-items: end;
+    margin-bottom: 20px;
+}
+
+.redes-sociais img{
+    border-radius: 100px;
+}
+
+footer span{
+    color: var(--cor03);
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+
+
+/*-------------------*/
+
