Correção de bug na função de leitura dos capítulos lidos

--- a/web data viz/public/style/style.css
+++ b/web data viz/public/style/style.css
@@ -363,7 +363,7 @@ main{
 
 #capitulos summary {
     font-weight: bold;
-    color: #10491B;
+    color: var(--cor03);
     cursor: pointer;
     padding: 4px;
 }
